name:                vacuum-tube
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Nathan Howell
maintainer:          nhowell@alphaheavy.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     Serialize
  build-depends:       base, ghc-prim, array, binary, containers, bytestring, protobuf
  c-sources:           WalkGraph.cmm

executable test
  main-is:             test.hs
  default-language:    Haskell2010
  build-depends:       base, ghc-prim, array, binary, containers, bytestring, vacuum-tube, protobuf
  ghc-options:         -rtsopts
