name:                vacuum-tube
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Nathan Howell
maintainer:          nhowell@alphaheavy.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     GHC.VacuumTube,
                       GHC.VacuumTube.Limbo,
                       GHC.VacuumTube.Morgue,
                       GHC.VacuumTube.VacuumNode,
                       GHC.VacuumTube.VacuumPtr,
                       GHC.VacuumTube.Types,
                       GHC.VacuumTube.EncodedState
  build-depends:       base, ghc-prim, array, binary, containers, bytestring
  c-sources:           cbits/Walker.cmm, cbits/Assembler.cmm
  ghc-options:         -Wall

test-suite test
  main-is:             test.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base, ghc-prim, array, binary, containers, bytestring, vacuum-tube, protobuf
  ghc-options:         -rtsopts -debug

source-repository head
  type:     git
  location: https://github.com/alphaHeavy/vacuum-tube.git
